--- a/text/citace.bib
+++ b/text/citace.bib
@@ -124,7 +124,7 @@ To easily access such an amount of data, a single point access is becoming essen
 
 %kosmicke zareni
 @online{scaleHeight_wiki,
-    author={Wikipedia, Otevřená encyklopedie},
+    author={Wikipedia, The Free Encyclopedia},
     organization={Wikipedia, The Free Encyclopedia},
     title={Scale height used in a simple atmospheric pressure model},
     url={https://en.wikipedia.org/wiki/Scale_height#Scale_height_used_in_a_simple_atmospheric_pressure_model},
@@ -153,7 +153,7 @@ To easily access such an amount of data, a single point access is becoming essen
 }
 
 @online{ISS_wiki,
-    author={Wikipedia, Otevřená encyklopedie},
+    author={Wikipedie, Otevřená encyklopedie},
     organization={Wikipedia, The Free Encyclopedia},
     title={Mezinárodní vesmírná stanice},
     url={https://cs.wikipedia.org/wiki/Mezin%C3%A1rodn%C3%AD_vesm%C3%ADrn%C3%A1_stanice},
@@ -311,6 +311,17 @@ eprint = {http://dx.doi.org/10.1063/1.1703059}
     pages = {73-81},
       doi = {10.1016/S1350-4487(03)00099-4},
 }
+
+%CR39 wikipedie
+@online{CR39_wiki,
+    author={Wikipedia, The Free Encyclopedia},
+    organization={Wikipedia, The Free Encyclopedia},
+    title={CR-39},
+    url={https://en.wikipedia.org/wiki/CR-39},
+    date={2017-02-16},
+    urldate={2017-05-25},
+}
+
 
 %dosis
 @online{dosis_oulu,
