--- a/text/main.tex
+++ b/text/main.tex
@@ -3,10 +3,11 @@
 \input{parts/preamble}
 %\includeonly{parts/titlepage}
 %\includeonly{parts/experimentDosis}
-%\includeonly{parts/ISS,parts/experimentDosis, parts/detektory, parts/praktickaCast}
+%\includeonly{parts/experimentDosis, parts/detektory, parts/praktickaCast}
 %\includeonly{parts/praktickaCast}
-%\includeonly{parts/detektory, parts/ISS}
+%\includeonly{parts/detektory, parts/experimentDosis}
 %\includeonly{parts/detektory,parts/praktickaCast}
+%\includeonly{parts/detektory}
 \begin{document}
 \pagestyle{empty}
 
@@ -28,6 +29,8 @@
 \include{parts/experimentDosis}
 
 \include{parts/praktickaCast}
+
+\include{parts/zaver}
 \nocite{*}
 \printbibliography[title=Seznam literatury]
 \end{document}
