--- a/text/parts/experimentDosis.tex
+++ b/text/parts/experimentDosis.tex
@@ -113,7 +113,7 @@ Z informací v oddílu \ref{sec:kosmickeZareni_solar} plyne, že za slunečního
 \end{figure}
 
 \section{Používané detektory}%AKTUALNOST TABULEK?????!!!!!!!!!!!!!!!
-Tento oddíl pojednává o používaných detektorech v experimentech DOSIS a DOSIS3D. Podrobnější informace o pasivních detektorech (např. jak se určuje absorbovaná dávká a dávkový ekvivalent z naměřených dat; srovnání jednotlivých typů pasivních detektorů) jsou v kapitole \ref{sec:detektory_detektory}. O aktivních detektorech tato práce nepojednává, podrobnější informace lze dohledat v \cite{activeDetectors,dosis2}.
+Tento oddíl pojednává o používaných detektorech v experimentech DOSIS a DOSIS3D. Podrobnější informace o pasivních detektorech (např. jak se určuje absorbovaná dávka a dávkový ekvivalent z naměřených dat; srovnání jednotlivých typů pasivních detektorů) jsou v kapitole \ref{sec:detektory_detektory}. O aktivních detektorech tato práce nepojednává, podrobnější informace lze dohledat v \cite{activeDetectors,dosis2}.
 
 %V případě pasivních detektorů jsou principy a fungování detektorů a potažmo i témata jako využívané kombinace detektorů pro měření absorbované dávky a dávkového ekvivalentu, srovnání pasivních detektorů mezi sebou a s aktivními detektory zpracována v kapitole \ref{sec:detektory_detektory}. V případě 
 
@@ -193,7 +193,7 @@ NPI používá dva TL detektory, Al$_2$O$_3$:C a CaSO$_4$:Dy. Oba dva jsou vyhod
 
 
 Z TED používá NPI HARZLAS TD-1 a od roku 2016 i TASTRAK. HARZLAS TD-1 je leptán 18 hodin za teploty 70 $^{\circ}$C v 5 N koncentrovaném roztoku NaOH; odleptaná vrstva je tlustá 15,3 $\mu$m. Celkově je analyzována plocha o velikosti 0,09 cm$^2$. Detektor je tlustý 0.9 mm. TASTRAK se leptá dvoufázově: první fáze trvá 6 hodin a jsou při ní zobrazeny stopy vytvořené částicemi s velkým $\mathit{LET}$; při druhé fázi, která trvá dalších 9 hodin, se zobrazí i stopy pocházejících od částic s nižším $\mathit{LET}$. Celkový čas leptání je tedy 15 hodin. Buď se postupuje postupným leptáním (6 hodin leptání, vyhodnocení, 9 hodin leptání, vyhodnocení), nebo se část detektoru leptá 6 hodin a část 15 hodin, tudíž
-detektor lze vyhodnotit najednou. Detektor se leptá při 70 $^{\circ}$C v 6,25 N koncentrovaném roztoku NaOH, odleptaná vrstva je tlustá 8,04/20,1 $\mu$m; analyzuje se plocha o velikost 0,5 cm$^2$ (v obou případech). Po leptání následuje u obou detektorů nasnímání stop lineárním snímacím zařízením s vysokým rozlišením (které je součástí mikroskopu HSP-1000, \cite{dosis_HSP1000}), poté jsou snímky se stopami analyzovány programem HspFit.
+detektor lze vyhodnotit najednou. Detektor se leptá při 70 $^{\circ}$C v 6,25 N koncentrovaném roztoku NaOH, odleptaná vrstva je tlustá 7,5/20,1 $\mu$m <++?++>; analyzuje se plocha o velikost 0,5 cm$^2$ (v obou případech). Po leptání následuje u obou detektorů nasnímání stop lineárním snímacím zařízením s vysokým rozlišením (které je součástí mikroskopu HSP-1000, \cite{dosis_HSP1000}), poté jsou snímky se stopami analyzovány programem HspFit.
 
 TASTRAK původně využívaný pouze MTA EK začíná být používán i ostatními organizacemi, jelikož různorodost využívaných TED a jejich způsobů vyhodnocení komplikuje vzájemné porovnávání a interpretaci naměřených dat \cite{cesky}. 
 %To. že nám (NPI) vyšla kalibrační krivka jinak než těm madarum, tak to psat do casti o detektorech
@@ -210,11 +210,13 @@ Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul C
 %Vzhledem k tomu, že tato práce je primárně zaměřena na detektory stop v pevné fázi, tak jsou informace v tomto oddíle značně povrchní. %MOZNA ZMENIT?!!!!
 Tato práce je zaměřena především na detektory stop v pevné fází, a proto jsou následující informace zestručněny. 
 \subsection{Srovnání dat pasivních detektorů v rámci jedné sady}
-V obr. \ref{fig:dosis_vysl_jednaSada} jsou uvedeny dávkové příkony naměřené detektory z 2. sady DOSIS3D v závislosti na pozici detektoru, tzn. na PDP. Jedná se o TL detektory z materiálů: $^6$LiF:Mg,Ti; $^7$LiF:Mg,Ti; CaF$_2$:Tm; $^{\text{Nat}}$LiF:Mg,Ti; $^6$LiF:Mg,Cu,P; $^7$LiF:Mg,Cu,P; Al$_2$O$_3$:C a CaSO$_4$:Dy a o všechny OSL detektory. Je vidět, že data ze všech detektorů sledují v podstatě stejný trend a že dávkové příkony z detektorů stejného materiálu vycházejí přibližně stejně. Avšak na druhou stranu jsou zde patrné rozdíly mezi naměřenými dávkovými příkony detektorů různých materiálů. Jedním z důvodů je rozdílná účinnost detekce těžkých nabitých částic každého TL/OSL materiálu (viz oddíl \ref{sec:detektory_TLD}); to je např. případ materiálů Al$_2$O$_3$:C a CaSO$_4$:Dy
-používaných NPI.
+V obr. \ref{fig:dosis_vysl_jednaSada} jsou uvedeny dávkové příkony naměřené detektory z 2. sady DOSIS3D v závislosti na pozici detektoru, tzn. na PDP. Jedná se o TL detektory z materiálů: $^6$LiF:Mg,Ti; $^7$LiF:Mg,Ti; CaF$_2$:Tm; $^{\text{Nat}}$LiF:Mg,Ti; $^6$LiF:Mg,Cu,P; $^7$LiF:Mg,Cu,P; Al$_2$O$_3$:C a CaSO$_4$:Dy a o všechny OSL detektory. Je vidět, že data ze všech detektorů sledují v podstatě stejný trend a že dávkové příkony z detektorů stejného materiálu vycházejí přibližně stejně. Avšak na druhou stranu jsou zde patrné rozdíly mezi naměřenými dávkovými příkony detektorů různých materiálů. Jedním z důvodů je rozdílná účinnost detekce těžkých nabitých částic každého TL/OSL materiálu (viz oddíl \ref{sec:detektory_TLD}); to je např. případ materiálů Al$_2$O$_3$:C a
+CaSO$_4$:Dy používaných NPI.
 \begin{table}[H]
   \centering
   \def\arraystretch{0.8}
+  \caption{Poměry odezev TLD materiálů s odezvou referenčního $^7$LiF:Mg,Ti. Odezvou se myslí určená dávka z daného detektoru \cite{dosis}.}
+  \label{tab:dosis_TLD_ratio}
   \begin{tabular}{ll}
 	\toprule
 	Materiál & Poměr odezev\\
@@ -229,8 +231,6 @@ CaSO$_4$:Dy			&0,88\\
 Al$_2$O$_3$:C (TLD)	&0,82\\
 \bottomrule
   \end{tabular}
-  \caption{Poměry odezev TLD materiálů s odezvou referenčního $^7$LiF:Mg,Ti. Odezvou se myslí určená dávka z daného detektoru \cite{dosis}.}
-  \label{tab:dosis_TLD_ratio}
 \end{table}
 
 Dávkový příkon od $^6$LiF:Mg,Ti, respektive $^6$LiF:Mg,Cu,P je systematicky vyšší než od $^7$LiF:Mg,Ti, resp. $^7$LiF:Mg,Cu,P, což je způsobeno tím, že nuklid $^6$Li má velký účinný průřez pro reakci ($n,\alpha$) s tepelnými neutrony. Nicméně rozdíl mezi těmito dvěma materiály není absorbovaná dávka pocházející od neutronů, ale od záření $\gamma$. Tato dávka je takové velikosti, aby vyvolala stejný termoluminiscenční signál jako skutečně obdržená dávka od neutronů. Tento jev je nazýván gamma ekvivalent neutronové dávky (``gamma-equivalent neutron dose''), \cite{dosis}.
@@ -263,6 +263,8 @@ Při porovnávání dat z TLD a DOSTEL je třeba brát v úvahu několik věcí.
   \centering
   \def\arraystretch{1}
   \footnotesize
+  \caption{Porovnání absorbovaných dávek určených pomocí aktivního detektoru DOSTEL-1 a pomocí TLD (materiál $^7$LiF:Mg,Ti), které byly umístěny v PDP X, v rámci dosud vyhodnocených sad~\cite{dosis}.}
+  \label{tab:dosis_vysl_srovnaniPassiveActive}
   \begin{tabular}{lll|ll}
 	\toprule
 	&\multirow{2}{*}{Sada}&\multirow{2}{*}{Nadmořská výška ISS [km]}&\multicolumn{2}{c}{Absorbovaná dávka [$\mu$Gy/den]}\\
@@ -278,8 +280,6 @@ Při porovnávání dat z TLD a DOSTEL je třeba brát v úvahu několik věcí.
     		&6&401-416&$256\pm20$&$256\pm7 $\\
 	\bottomrule
   \end{tabular}
-  \caption{Porovnání absorbovaných dávek určených pomocí aktivního detektoru DOSTEL-1 a pomocí TLD (materiál $^7$LiF:Mg,Ti), které byly umístěny v PDP X, v rámci dosud vyhodnocených sad~\cite{dosis}.}
-  \label{tab:dosis_vysl_srovnaniPassiveActive}
 \end{table}
 
 Výhodou aktivních detektorů je, že dokážou rozeznat příspěvky k dávce od GCR a od zachycených protonů v SAA.
